--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  html {
+    background-color: #ffffff;
+    color: #141414;
+    font-family: "Roboto";
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* @font-face {
+    font-family: 'Bradley Hand ITC';
+    font-style: normal;
+    src: url(/fonts/bradhitc.ttf) format("tff");
+  } */
 }
